Update and rename Readme to README

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-# Agentic Generative Artificial Intelligence (AGenAI) is a type of AI that autonomously performs a variety of tasks and creates new content, such as text, images, or music.
+ 
+Agentic Generative Artificial Intelligence (AGenAI) is a type of AI that autonomously performs a variety of tasks and creates new content, such as text, images, or music.
 # It combines the autonomy of agentic AI with the creative capabilities of generative AI.
 Key Features of AGenAI:
 Autonomy: Operates independently.
